# Framework-for-monitoring-economic-indicators

./: CITATION  README.md  environment.yml  environment_droplet.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: final_project_productivity.tex  final_project_productivity_pres.tex  refs.bib  task_paper.py
src/final_project_productivity/: __init__.py  config.py  management_specs.yml  utilities.py  web_scraping_specs.yml
src/final_project_productivity/analysis/: __init__.py  estimation.py  model.py  task_analysis.py
src/final_project_productivity/check_internet/: __init__.py  check_internet.py  task_status_and_report.py
src/final_project_productivity/compare/: __init__.py  compare.py  task_compare.py
src/final_project_productivity/data_collection/: __init__.py  task_data_collection.py  web_scraper.py
src/final_project_productivity/data_management/: __init__.py  clean_data.py  task_data_management.py
src/final_project_productivity/final/: __init__.py  plot.py  task_final.py
tests/: __init__.py
tests/analysis/: __init__.py  test_estimate.py  test_model.py  test_predict.py
tests/check_internet/: __init__.py  test_check_internet.py
tests/compare/: __init__.py  test_compare.py
tests/data_management/: __init__.py  data_fixture.csv  test_clean_data.py
