[metadata]
name = final_project_productivity
description = Final Project: Productivity Analysis Across Sectors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sjurlne/final_project_productivity
author = Sjur Løne Nilsen
author_email = sjur.lone@gmail.com
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/sjurlne/final_project_productivity
    Documentation = https://github.com/sjurlne/final_project_productivity
    Github = https://github.com/sjurlne/final_project_productivity
    Tracker = https://github.com/sjurlne/final_project_productivity/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/final_project_productivity/_version.py
